--- a/requirements.txt
+++ b/requirements.txt
@@ -24,6 +24,7 @@ pytest==6.2.5
 PyYAML==5.4.1
 requests==2.26.0
 six==1.16.0
+swagger-ui-bundle==0.0.9
 toml==0.10.2
 urllib3==1.26.7
 Werkzeug==1.0.1
