--- a/requirements.txt
+++ b/requirements.txt
@@ -13,6 +13,8 @@ itsdangerous==1.1.0
 Jinja2==2.11.3
 jsonschema==3.2.0
 MarkupSafe==2.0.1
+mypy==0.910
+mypy-extensions==0.4.3
 openapi-schema-validator==0.1.5
 openapi-spec-validator==0.3.1
 packaging==21.3
@@ -26,5 +28,6 @@ requests==2.26.0
 six==1.16.0
 swagger-ui-bundle==0.0.9
 toml==0.10.2
+typing_extensions==4.0.1
 urllib3==1.26.7
 Werkzeug==1.0.1
